# whale-market-system

./: CMakeLists.txt  README.md
data/: good.txt  order.txt  user.txt
headers/: config.h
headers/good/: good.h
headers/interface/: interface.h
headers/menu/: menu.h
headers/order/: order.h
headers/tools/: color.h  hint.h  info.h
headers/user/: user.h
src/: main.c
src/good/: good.c
src/interface/: admin_interface.c  buyer_interface.c  good_interface.c  info_interface.c  main_interface.c  modify_interface.c  seller_interface.c  user_interface.c
src/menu/: menu.c
src/order/: order.c
src/tools/: color.c  hint.c  info.c
src/user/: user.c
